<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="com.igabeto.mayoromenor.Menu">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPlayLifes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_border"
            android:padding="10dp"
            android:text="@string/btnPlayLifes"
            android:textColor="@android:color/white"
            android:textSize="30dp" />

        <Button
            android:id="@+id/btnPlayCrono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_border"
            android:padding="10dp"
            android:text="@string/btnPlayCrono"
            android:textColor="@android:color/white"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_border"
            android:padding="10dp"
            android:text="@string/btnRanking"
            android:textColor="@android:color/white"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/infoApp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/infoDev"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="12dp" />
    </LinearLayout>

</LinearLayout>